--- a/.gitignore
+++ b/.gitignore
@@ -24,4 +24,12 @@ build/Release
 
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
-node_modules
+node_modules/
+
+# Additions
+.git/
+.idea/
+bower_components/
+web/
+junk*.*
+test*.*
